# libdrm

./: .gitignore  Makefile.am  configure.ac  xf86drmMode.c  xf86drmMode.h
debian/: changelog  control  libdrm-etnaviv0.symbols  libdrm-exynos1.symbols  libdrm-freedreno1.symbols  libdrm-nouveau2.symbols  libdrm-omap1.symbols  libdrm-radeon1.symbols  libdrm2.symbols  libkms1.symbols  rules
etnaviv/: Android.mk  Makefile.am  Makefile.sources  etnaviv-symbol-check  etnaviv_bo.c  etnaviv_cmd_stream.c  etnaviv_device.c  etnaviv_drm.h  etnaviv_drmif.h  etnaviv_gpu.c  etnaviv_pipe.c  etnaviv_priv.h
include/drm/: drm.h  drm_mode.h
libkms/: intel.c
tests/: Makefile.am
tests/etnaviv/: Makefile.am  etnaviv_2d_test.c  etnaviv_cmd_stream_test.c
tests/modetest/: buffers.c  modetest.c
tests/proptest/: proptest.c
